Add tracability section to concurrent marking post